force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Dash Conversation</label>
    <nameField>
        <displayFormat>CONV-{00000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dash Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>