force-app/main/default/objects/Conversation__c/fields/Agent_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de secuencia del siguiente turno enviado a Agentforce.</description>
    <label>Agent Sequence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>