force-app/main/default/objects/Conversation__c/fields/Agent_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session_ID__c</fullName>
    <description>Identificador de sesión utilizado para mantener el contexto de Agentforce entre mensajes.</description>
    <label>Agent Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>