force-app/main/default/objects/Conversation__c/fields/Assigned_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asesor de Salesforce asignado actualmente a esta conversación.</description>
    <inlineHelpText>Identifica al asesor humano responsable de atender la conversación.</inlineHelpText>
    <label>Assigned Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>