force-app/main/default/objects/Conversation__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canal de mensajería utilizado para mantener la conversación con el prospecto.</description>
    <inlineHelpText>Identifica si la conversación proviene de WhatsApp, correo electrónico u otro canal integrado.</inlineHelpText>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>