force-app/main/default/objects/Conversation__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>Asunto que se conserva en las respuestas de una conversación por correo.</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>