force-app/main/default/objects/Conversation__c/fields/External_Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Conversation_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Conversation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>