force-app/main/default/objects/Conversation__c/fields/External_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Participant_ID__c</fullName>
    <description>Dirección externa utilizada para responder al prospecto, por ejemplo el número de WhatsApp o el correo electrónico.</description>
    <inlineHelpText>No almacenes tokens ni secretos en este campo.</inlineHelpText>
    <label>External Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>