force-app/main/default/objects/Conversation__c/fields/Last_Inbound_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_At__c</fullName>
    <description>Fecha y hora del último mensaje recibido del prospecto.</description>
    <label>Last Inbound At</label>
    <type>DateTime</type>
</CustomField>