force-app/main/default/objects/Conversation__c/fields/Last_Message_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_At__c</fullName>
    <description>Fecha y hora del mensaje más reciente recibido o enviado en esta conversación.</description>
    <inlineHelpText>Se actualiza cuando se recibe o envía un nuevo mensaje y permite ordenar las conversaciones por actividad reciente.</inlineHelpText>
    <label>Last Message At</label>
    <type>DateTime</type>
</CustomField>