force-app/main/default/objects/Conversation__c/fields/Last_Message_Preview__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Preview__c</fullName>
    <description>Vista previa del mensaje más reciente de la conversación.</description>
    <inlineHelpText>Muestra un fragmento del último mensaje recibido o enviado para visualizarlo en Dash.</inlineHelpText>
    <label>Last Message Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>