force-app/main/default/objects/Conversation__c/fields/Last_Outbound_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_At__c</fullName>
    <description>Fecha y hora del último mensaje enviado por Agentforce o un asesor.</description>
    <label>Last Outbound At</label>
    <type>DateTime</type>
</CustomField>