force-app/main/default/objects/Conversation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead o prospecto relacionado con esta conversación.</description>
    <inlineHelpText>Identifica al prospecto de Salesforce asociado con la conversación.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>