force-app/main/default/objects/Conversation__c/fields/Needs_Human_Attention__c.field-meta.xml
<CustomField>
    <fullName>Needs_Human_Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la conversación requiere intervención de un asesor humano.</description>
    <inlineHelpText>Cuando está marcado, Dash muestra la conversación como una solicitud de atención humana.</inlineHelpText>
    <label>Needs Human Attention</label>
    <type>Checkbox</type>
</CustomField>