force-app/main/default/objects/Conversation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado actual de atención de la conversación entre el prospecto, Agentforce y el asesor humano.</description>
    <inlineHelpText>Indica si la conversación está siendo atendida por el bot, por un asesor, está esperando respuesta o ya fue cerrada.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bot</fullName>
                <default>true</default>
                <label>Bot</label>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>